# TriangleRasterizer-OpenGL

./: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  project2B  project2B.cxx
